--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -948,29 +948,30 @@ button {
 .guide_sub_tit {font-size: 1.8rem; background: #083274; width: 120px; padding: 15px 15px 10px; border-radius: 5px; text-align: center; color: #fff;}
 
 .guide_all {border-top: 2px solid #083274; border-bottom: 2px solid #083274;}
-.guide_all .box {border-bottom:1px solid #ededed; padding: 40px 0; display: flex;}
+.guide_all .box {border-bottom:1px solid #ededed; padding: 40px 0; }
 .guide_all .box:last-child {border:none;}
-.guide_all .box .guide_tit_box {flex-basis: 180px; }
-.guide_all .box .cont_list {flex: 1;}
-.guide_all .box .cont_list ul {flex: 1; display: flex; flex-direction: column; gap: 10px;}
-.guide_all .box .cont_list li { display: flex; gap:10px; }
-.guide_all .box .cont_list .gubun {
-    flex-basis: 100px; font-size: 1.6rem; text-align: center; background: #ededed; border-radius: 3px;
-    padding: 20px 15px 17px; display: flex; flex-direction: column; justify-content: center;
+.guide_all .cont_list {flex: 1; display: flex; flex-direction: column; gap: 40px;}
+.guide_all .table_tit {display: flex; flex-direction: column; gap: 3px; margin-left: 5px; margin-bottom: 5px;}
+.guide_all .table_tit .big {font-size: 2rem; color: #083274;}
+.guide_all .table_tit .mobile_cmnt {font-size: 1.4rem; position: relative; padding-left: 20px; display: none;}
+.guide_all .table_tit .mobile_cmnt::before {
+    display: inline-block; content: "!"; width: 14px; height: 14px; line-height: 14px; font-size: 10px;
+    background: #083274; border-radius: 100px; color: #fff; text-align: center;
+    position: absolute; left: 0; top: 2px;
 }
-.guide_all .box .cont_list .naeyong {flex: 1; display: flex; gap:10px; }
-.guide_all .box .cont_list .naeyong .small {font-size: 1.4rem; display: inline-block;}
-.guide_all .box .cont_list .naeyong .item {
-    padding: 20px 15px 17px; border-radius: 3px; border:1px solid #083274;
-    width: 100%; font-size: 1.6rem; text-align: center;
-    display: flex; flex-direction: column; justify-content: center;
-}
-.guide_all .box .cont_list .list_top .item {background:#083274; color: #fff; font-size: 1.8rem; word-break: keep-all;}
-.guide_all .box .cont_list .naeyong .item.list {text-align: left;}
-.guide_all .box .cont_list .naeyong .item.list p {padding-left: 10px; position: relative; margin:5px 0;}
-.guide_all .box .cont_list .naeyong .item.list p:before {
+.guide_all .table_wrap table {width: 100%; table-layout: fixed; text-align: center;}
+.guide_all .table_wrap th,
+.guide_all .table_wrap td {padding: 5px; vertical-align: middle; height: 0; word-break: keep-all;} 
+.guide_all .table_wrap .first {width: 150px;}
+.guide_all .table_wrap .item {border-radius: 5px; padding: 10px; height: 100%; display: flex; flex-direction: column; justify-content: center; font-size: 1.4rem; }
+.guide_all .table_wrap th .item {border: 1px solid #083274; background: #083274; color: #fff;}
+.guide_all .table_wrap td .item {border: 1px solid #ddd;}
+.guide_all .table_wrap td.first .item {border: 1px solid #f1f1f1; background: #f1f1f1;}
+.guide_all .table_wrap .item.list {text-align: left;}
+.guide_all .table_wrap .item.list p {padding-left: 10px; position: relative; margin:3px 0;}
+.guide_all .table_wrap .item.list p:before {
     display: block; content:"·"; color: #083274; position: absolute; left: 0;
-}
+} 
 
 .guide_all_inquiry {margin-top: 40px; display: flex; }
 .guide_all_inquiry .tit_box {flex-basis: 180px;}
